# discord-bot

./: README.md  cloudbuild.yaml  deploy.sh  docker-compose.yaml  main.py
.github/workflows/: deploy.yaml
bot/: .gitignore  Dockerfile  bot.py  pyproject.toml
infra/: .terraform.lock.hcl  main.tf  variables.tf
