[project]
name = "bot"
version = "0.1.0"
description = "Verfication bot for BITS BSc CS discord server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py>=2.4.0",
    "pydantic[email]>=2.9.2",
    "python-dotenv>=1.0.1",
    "resend>=2.4.0",
    "upstash-ratelimit>=1.1.0",
    "upstash-redis>=1.2.0",
]
